@@ -272,7 +272,8 @@ class parseini:
         vc.config = config
         reader = IniReader(self._cfg, fallbacksections=["testenv"])
         reader.addsubstitutions(**subs)
-        vc.develop = reader.getbool(section, "usedevelop", config.option.develop)
+        vc.develop = not config.option.installpkg and \
+               reader.getbool(section, "usedevelop", config.option.develop)
         vc.envdir = reader.getpath(section, "envdir", "{toxworkdir}/%s" % name)
         vc.args_are_paths = reader.getbool(section, "args_are_paths", True)
         if reader.getdefault(section, "python", None):
